test: keep ANALYZE assertions Java 11 compatible